<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoprincipal"
    tools:context=".fragment_menu">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_Name"
        android:textColor="@color/white"
        android:textSize="35sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <ImageView
        android:id="@+id/logocimarron"
        android:layout_width="238dp"
        android:layout_height="193dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"
        app:srcCompat="@drawable/logoprincipal"
        android:contentDescription="@string/logoPrincipal"/>

    <Button
        android:id="@+id/BotonIniciarSesion"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/A2"
        android:fontFamily="@font/roboto"
        android:text="@string/B_InicioSesión"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/BotonRegistrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <Button
        android:id="@+id/BotonRegistrarse"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/A2"
        android:fontFamily="@font/roboto"
        android:text="@string/B_Registrar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718" />

    <TextView
        android:id="@+id/textoUniversidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almendra"
        android:text="@string/TextoUniversidad"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <ImageView
        android:id="@+id/logoinferior1"
        android:layout_width="94dp"
        android:layout_height="65dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955"
        app:srcCompat="@drawable/figurabotoncimarron"
        android:contentDescription="@string/logoInferior"/>

</androidx.constraintlayout.widget.ConstraintLayout>