<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondogeneral">

    <TextView
        android:id="@+id/CimaRide"
        android:layout_width="143dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_Name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/BotonFlecha"
        android:layout_width="74dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/colorfondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:contentDescription="@string/flecha" />


    <ImageView
        android:id="@+id/logoinferior2"
        android:layout_width="94dp"
        android:layout_height="65dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955"
        app:srcCompat="@drawable/figurabotoncimarron"
        android:contentDescription="@string/logoInferior" />

    <TextView
        android:id="@+id/textoUniversidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almendra"
        android:text="@string/TextoUniversidad"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <TextView
        android:id="@+id/textRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenido"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="281dp"
        android:layout_height="359dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/cimarrona"
        tools:ignore="ContentDescription" />


    <Button
        android:id="@+id/BotonIniciarPasajero"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:backgroundTint="@color/Amarillo"
        android:fontFamily="@font/roboto"
        android:text="@string/Pasajero"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/BotonIniciarConductor"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:backgroundTint="@color/Amarillo"
        android:fontFamily="@font/roboto"
        android:text="@string/Conductor"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/Iniciarsesioncomo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/Iniciarsesión"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textoUniversidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445" />

    <Button
        android:id="@+id/esteticacorreo4"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/Gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.230"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/esteticaPassword4"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/Gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.320"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:text="@string/OlvidasteContraseña"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.370"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/recibecorreo4"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/correo"
        android:textColor="@color/GrisNegro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23"
        tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/recibePassword4"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="@color/GrisNegro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.320"
        tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="276dp"
        android:layout_height="261dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887"
        app:srcCompat="@drawable/cimarron"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>