<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondogeneral">

    <Button
        android:id="@+id/botonRegistrarseConductor"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/Amarillo"
        android:fontFamily="@font/roboto"
        android:text="@string/boton_terminarRegistro"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/CimaRide"
        android:layout_width="143dp"
        android:layout_height="51dp"
        android:text="@string/app_Name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        tools:ignore="TextSizeCheck"
        tools:layout_editor_absoluteX="114dp" />


    <ImageButton
        android:id="@+id/BotonFlecha"
        android:layout_width="74dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/colorfondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:contentDescription="@string/flecha" />


    <TextView
        android:id="@+id/RegistroConductor"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:fontFamily="@font/roboto"
        android:text="@string/TituloRegistroCond"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/esteticaNoLicencia"
        android:layout_width="330dp"
        android:layout_height="36dp"
        android:backgroundTint="@color/Gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.200"
        tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck,TouchTargetSizeCheck,VisualLintButtonSize" />


    <Button
        android:id="@+id/esteticaVigencia"
        android:layout_width="330dp"
        android:layout_height="36dp"
        android:backgroundTint="@color/Gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.260"
        tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/esteticaModelo"
        android:layout_width="330dp"
        android:layout_height="36dp"
        android:backgroundTint="@color/Gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40"
        tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/esteticaNoPlacas"
        android:layout_width="330dp"
        android:layout_height="36dp"
        android:backgroundTint="@color/Gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.460"
        tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/esteticaColor"
        android:layout_width="330dp"
        android:layout_height="36dp"
        android:backgroundTint="@color/Gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.520"
        tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

    <TextView
        android:id="@+id/RegistroVehiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegistroVehículo"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.340" />

    <TextView
        android:id="@+id/PosiblesRutas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/PosiblesRutas"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.580" />


    <ImageView
        android:id="@+id/logoinferior2"
        android:layout_width="94dp"
        android:layout_height="65dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955"
        app:srcCompat="@drawable/figurabotoncimarron"
        android:contentDescription="@string/logoInferior" />
    <TextView
        android:id="@+id/textoUniversidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almendra"
        android:text="@string/TextoUniversidad"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <EditText
        android:id="@+id/recibeNoPlacas"
        android:layout_width="330dp"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/No.Placas"
        android:textColor="@color/GrisNegro"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46"
        tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/recibeColor"
        android:layout_width="330dp"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Color"
        android:textColor="@color/GrisNegro"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/recibeModelo"
        android:layout_width="330dp"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/Modelo"
        android:textColor="@color/GrisNegro"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/recibeVigencia"
        android:layout_width="330dp"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/Vigencia"
        android:textColor="@color/GrisNegro"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.260"
        tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="330dp"
        android:layout_height="36dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/No.Licencia"
        android:textColor="@color/GrisNegro"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.200"
        tools:ignore="Autofill,LabelFor,TouchTargetSizeCheck" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="470dp"
        tools:ignore="MissingConstraints">

    </com.google.android.material.chip.ChipGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="549dp"
        tools:ignore="MissingConstraints,UselessLeaf" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Matutino"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Vespertino"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.800"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ambos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Turno"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <ImageButton
        android:id="@+id/botonPosiblesrutas"
        android:layout_width="68dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661"
        app:srcCompat="@drawable/simbolo_mas"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>